--- a/public/developing.html
+++ b/public/developing.html
@@ -5,9 +5,7 @@
     <title>anchart3d</title>
 
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./css/anchart3d.css">
     <link rel="stylesheet" type="text/css" href="./css/stylesheet.css">
-    <script type="text/javascript" src="../build/anchart3d.js"></script>
 </head>
 <body>
 
@@ -45,7 +43,7 @@
     <h1>Developing</h1>
     <h3>How you can contribute to this project</h3>
     <p>
-    Feel free to <a href="https://github.com/deKilla/anchart3d" target="blank">fork</a> this project an participate in it's development.
+    Feel free to <a href="https://github.com/deKilla/anchart3d" target="blank">fork</a> this project and participate in it's development.
     </p>
     <p>
     You will need <a href="https://nodejs.org/en/" target="blank">node.js</a> and <a href="https://www.npmjs.com/" target="blank">npm</a> in order to run it.
