added data json configs for each chart

--- a/public/bar.html
+++ b/public/bar.html
@@ -45,6 +45,32 @@
     <h1>BarChart</h1>
     <div id="barChart"></div>
 
+    <p>
+    The bar chart is visualizing data by aligning every data entry of a dataset in one row.
+    So it is possible to show data records, with the same background and different timestamps, along one row (e.g. z-axis).
+    </p>
+    <p>
+    An example of a dataset (with multiple data entries) can be viewed underneath:
+    </p>
+    <pre class="code" style="text-align:left">
+    var jsonData = [
+        {
+            "name":"Peak Temperatures",
+            "values": [
+                {"name":"Summer2011", "value":43},
+                {"name":"Summer2012", "value":44.5},
+                {"name":"Summer2013", "value":39},
+                {"name":"Summer2014", "value":38},
+                {"name":"Summer2015", "value":41},
+                {"name":"Summer2016", "value":40}
+            ]
+        }
+    ]
+    </pre>
+    <p>
+    As it is shown here, the dataset can contain multiple data entries, which are then displayed within one row behind each other.
+    </p>
+
 </div>
 <br class="clear" />
 </div>
