--- a/public/configuration.html
+++ b/public/configuration.html
@@ -67,7 +67,7 @@
     <dt>legend</dt>
     <dd>Displays a legend.</dd>
     <dt>showOnScreenControls</dt>
-    <dd>Usually the chart can be interacted with using the mouse. Setting this option to <b>true</b> will display an element, that allows moving the chart with a HTML D-Pad.</dd>
+    <dd>Usually the chart can be interacted with using the mouse. Setting this option to <b>true</b> will display an element, that allows moving the chart with a D-Pad.</dd>
     <dt>startAnimation</dt>
     <dd>Wheter an entry animation should be used when the page is loaded or not. Setting this option to <b>false</b> means, that the chart will be immediately displayed without an entry animation.</dd>
     <dt>tooltip</dt>
