--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
             <li><a href="https://github.com/deKilla">Michael Fuchs</a></li>
             <li><a href="https://github.com/timoooo">Timo Hasenbichler</a></li>
         </ul>
-        Furthermore, this project was supervised by <b>Dipl.-Ing. Dr.techn. Peter Salhofer.</b>
+        The project was supervised by <b>Dipl.-Ing. Dr.techn. Peter Salhofer.</b>
     </p>
     <p>
     The library is one of just a few contender in the world of visualizing data in three dimensions using not only perspectives but also interactions.
