--- a/public/pie.html
+++ b/public/pie.html
@@ -45,6 +45,29 @@
     <h1>PieChart</h1>
     <div id="pieChart"></div>
 
+    <p>
+        The pie chart is visualizing data with two dimensions. One dataset can contain at most two data entries
+        (e.g. one data entry for the radius of the segment and one data entry for the height of the segment).
+        So it is possible to show data records with two data entries and visualize the difference of the data entries with the radius and height of each segment.
+    </p>
+    <p>
+        An example of a dataset (with two data entries) can be viewed underneath:
+    </p>
+    <pre class="code" style="text-align:left">
+    var jsonData = [
+        {
+            "name":"Austria",
+            "values": [
+                {"name":"Population", "value":8747000},
+                {"name":"Average salary", "value":2670}
+            ]
+        }
+    ]
+    </pre>
+    <p>
+        As it is shown here, the dataset can contain two data entries, which are then displayed within the radius and height of a segment.
+    </p>
+
 </div>
 <br class="clear" />
 </div>
