--- a/public/pie.html
+++ b/public/pie.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/anchart3d.css">
     <link rel="stylesheet" type="text/css" href="./css/stylesheet.css">
-    <script type="text/javascript" src="../build/anchart3d.js"></script>
+    <script type="text/javascript" src="js/anchart3d.js"></script>
 </head>
 <body>
 
