--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
         <hr>
         <li><a href="usage.html">Usage</a></li>
         <li><a href="configuration.html">Configuration</a></li>
+        <li><a href="swap.html">Data Swapping</a></li>
         <li><a href="developing.html">Developing</a></li>
     </ul>
 
