small pre adjustment

--- a/public/swap.html
+++ b/public/swap.html
@@ -45,11 +45,11 @@
     <h3>How to swap the data of a chart during runtime</h3>
     <p>
     If you want to change the data a chart is based on, you can easily create a function that does that and trigger that function by using a button for example. First you need to create said function
-    <pre class="code">
-    var swap = function () {
-        chart.data(newdata);
-        chart.swapData();
-    };
+    <pre class="code" style="text-align:left; padding-left:100px;">
+var swap = function () {
+    chart.data(newdata);
+    chart.swapData();
+};
     </pre>
     </p>
     <p>
