--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
         The project was supervised by <b>Dipl.-Ing. Dr.techn. Peter Salhofer.</b>
     </p>
     <p>
-    The library is one of just a few contender in the world of visualizing data in three dimensions using not only perspectives but also interactions.
+    The library is one of just a few contenders in the world of visualizing data in three dimensions using not only perspectives but also interactions.
     Also it is completely free, since it is open source. Our goal was to provide a good base for visualizing data in three dimensional space in the browser and to show what the library is capable of.
     Moreover, it should enable the community to contribute to that, and make anchart3d a worthy contender in the world of data visualization.
     </p>
