small adjustments / language zindex

--- a/public/pie.html
+++ b/public/pie.html
@@ -77,52 +77,52 @@
 
     var jsonData1 = [
         {
-            "name":"Österreich",
+            "name":"Austria",
             "values": [
-                {"name":"Einwohner", "value":8747000},
-                {"name":"DSGehalt", "value":2670}
+                {"name":"Population", "value":8747000},
+                {"name":"Average salary", "value":2670}
             ]
         },
         {
-            "name":"Deutschland",
+            "name":"Germany",
             "values": [
-                {"name":"Einwohner", "value":80062000},
-                {"name":"DSGehalt", "value":2790}
+                {"name":"Population", "value":80062000},
+                {"name":"Average salary", "value":2790}
             ]
         },
         {
-            "name":"Italien",
+            "name":"Italy",
             "values": [
-                {"name":"Einwohner", "value":59083000},
-                {"name":"DSGehalt", "value":2390}
+                {"name":"Population", "value":59083000},
+                {"name":"Average salary", "value":2390}
             ]
         },
         {
-            "name":"Russland",
+            "name":"Russia",
             "values": [
-                {"name":"Einwohner", "value":143500000},
-                {"name":"DSGehalt", "value":1780}
+                {"name":"Population", "value":143500000},
+                {"name":"Average salary", "value":1780}
             ]
         },
         {
-            "name":"Schweiz",
+            "name":"Swiss",
             "values": [
-                {"name":"Einwohner", "value":8081000},
-                {"name":"DSGehalt", "value":2880}
+                {"name":"Population", "value":8081000},
+                {"name":"Average salary", "value":2880}
             ]
         },
         {
-            "name":"Belgien",
+            "name":"Belgium",
             "values": [
-                {"name":"Einwohner", "value":11200000},
-                {"name":"DSGehalt", "value":2470}
+                {"name":"Population", "value":11200000},
+                {"name":"Average salary", "value":2470}
             ]
         },
         {
-            "name":"Frankreich",
+            "name":"France",
             "values": [
-                {"name":"Einwohner", "value":66030000},
-                {"name":"DSGehalt", "value":2550}
+                {"name":"Population", "value":66030000},
+                {"name":"Average salary", "value":2550}
             ]
         }
     ];
