--- a/public/usage.html
+++ b/public/usage.html
@@ -16,7 +16,7 @@
 <a href="https://fh-joanneum.at/informationsmanagement/bachelor/" id="fhlogo">
 <img src="img/fh.png" alt="FH Joanneum" /></a>
 
-<br class="clear" /> z-index:-9999
+<br class="clear" />
 
 <div class="right">
 
