--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 </div>
 <div class="content">
     
-    <h1>anchart3d</h1>
+    <h1>anchart3d | ənˈʧɑrtɪd</h1>
     <h3>...is an open source library for interactive three dimensional charts in the browser</h3>
     <p>
         This library has been created as part of a project on the <a href="https://fh-joanneum.at"><b>FH Joanneum Graz</b></a>
