--- a/public/usage.html
+++ b/public/usage.html
@@ -76,7 +76,8 @@ anchart3d.createChart("chart")
     and pass the <b>id</b> of the div, which we have created earlier, as an argument.
     Then you pass an array with your configuration to <b>setConfig()</b>. This is optional and described <a href="configuration.html">here</a>.
     The third method defines what kind of chart should be created. In this example we want to create a pie chart, so we call <b>pieChart()</b>.
-    Another very important "ingredient" to visualize data, is the actual data you want to visualize. This specific data has to be stored in a JSON and then passed to the <b>data()</b> method. The data() method takes an optional second parameter - a string that you can use to sort the data. That must be a category of your dataset - e.g. "income".
+    Another very important "ingredient" to visualize data, is the actual data you want to visualize. This specific data has to be stored in a JSON and then passed to the <b>data()</b> method.
+    The <b>data()</b> method takes an optional second parameter, which is of type string, that you can use to sort the data. The string has to be equal with the name of one the data entries in the dataset(s).
     In order to look up on how you have to structure the JSON for your data, visit the specific link of the chart you want to use. There you can find a description on how to define the data in the JSON.
     The last method is called <b>draw()</b> (<u>which has to be called last in the fluent api chain</u>), which will initialize and generate the chart.
     </p>
